--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,9 +1,7 @@
 {% include head.html %}
 
-  <header class="header">
-    <h1 class="title">{{ page.title }}</h1>
-  </header>
-
-  <article class="content">
+  <section class="content">
     {{ content }}
-  </article>
+  </section>
+
+{% include foot.html %}
